CMakeLists.txt changes for building on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,9 @@ ENDIF(MSVC)
 MESSAGE(STATUS "\n-- SEARCHING FOR SYTEM PACKAGES")
 # Find our packages
 IF(MSVC)
-	FIND_PACKAGE(BZIP2 REQUIRED)
-	FIND_PACKAGE(XZ REQUIRED)
-	FIND_PACKAGE(ICU REQUIRED)
+	FIND_PACKAGE(BZIP2 QUIET)
+	FIND_PACKAGE(XZ QUIET)
+	FIND_PACKAGE(ICU QUIET)
 	FIND_PACKAGE(CURL REQUIRED)
 ELSE(MSVC)
 	FIND_PACKAGE(BZIP2 QUIET)
@@ -59,7 +59,7 @@ ELSE(MSVC)
 	FIND_PACKAGE(ICU QUIET)
 	FIND_PACKAGE(CURL QUIET)
 ENDIF(MSVC)
-FIND_PACKAGE(CLucene QUIET)
+#FIND_PACKAGE(CLucene QUIET)
 FIND_PACKAGE(ZLIB QUIET)
 FIND_PACKAGE(PkgConfig QUIET)
 FIND_PACKAGE(Regex QUIET)
@@ -272,12 +272,12 @@ ENDIF(APPLE OR iPhone)
 # Our build test
 #
 
-ADD_EXECUTABLE(buildtest buildtest.cpp)
-IF(BUILDING_STATIC)
-	TARGET_LINK_LIBRARIES(buildtest sword_static)
-ELSE(BUILDING_STATIC)
-	TARGET_LINK_LIBRARIES(buildtest sword)
-ENDIF(BUILDING_STATIC)
+#ADD_EXECUTABLE(buildtest buildtest.cpp)
+#IF(BUILDING_STATIC)
+#	TARGET_LINK_LIBRARIES(buildtest sword_static)
+#ELSE(BUILDING_STATIC)
+#	TARGET_LINK_LIBRARIES(buildtest sword)
+#ENDIF(BUILDING_STATIC)
 
 ##############################################################################################
 # Installing the library, headers, utilies, etc
